@@ -1,4 +1,5 @@
 Veretino 0.3.9
+* A database file with a predefined WorkDir can now be placed in the current one.
 * The filtered View is highlighted by changing the background.
 
 Veretino 0.3.8
